Actualizado el correo

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Poseo experiencia práctica con los fundamentos de tecnologías clave como C#, P
         ¡no dudes en contactarme!
     </p>
         <div class="contact-links">
-            <a href="mailto:perezperez.victormanuel1998@gmail.com">📧 Correo</a>
+            <a href="mailto:victor.manuel.pp98@gmail.com">📧 Correo</a>
             <a href="https://github.com/victormp98" target="_blank">💻 GitHub</a>
             <a href="https://www.linkedin.com/in/v%C3%ADctor-manuel-perez-perez-468883367/" target="_blank">🔗 LinkedIn</a>
         </div>
