Actualizado el link 2 de correo

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Poseo experiencia práctica con los fundamentos de tecnologías clave como C#, P
     <!-- Pie de página -->
 <footer>
     <div class="footer-links">
-        <a href="mailto:perezperez.victormanuel1998@gmail.com" title="Envíame un correo">📧</a>
+        <a href="mailto:victor.manuel.pp98@gmail.com" title="Envíame un correo">📧</a>
         <a href="https://github.com/victormp98" target="_blank" title="Mi GitHub">💻</a>
         <a href="https://www.linkedin.com/in/v%C3%Actor-manuel-perez-perez-468883367/" target="_blank" title="Mi LinkedIn">🔗</a>
     </div>
